--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import BuildStores from '@/components/client-only/BuildStores'
       <ConversationSidebar client:load />
     </Sidebar>
     <Main />
-    <Sidebar direction="right" class="hidden lg:block">
+    <Sidebar direction="right" class="lg:block !hidden">
       <Settings client:only />
     </Sidebar>
   </div>
